[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/MainLevel.gd" type="Script" id=1]
[ext_resource path="res://Assets/MainLevelTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/LevelHighlightsTileSet.tres" type="TileSet" id=3]
[ext_resource path="res://Maps/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Health_Icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/XP_Icon.png" type="Texture" id=6]
[ext_resource path="res://Assets/HealthBar.png" type="Texture" id=7]
[ext_resource path="res://Assets/XPBar.png" type="Texture" id=8]
[ext_resource path="res://Assets/conformity.fnt" type="BitmapFont" id=9]
[ext_resource path="res://Scripts/Input.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
light_color = Color( 1, 0, 0, 1 )
dark_color = Color( 1, 0.00372314, 0.00372314, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
light_color = Color( 1, 1, 1, 1 )
dark_color = Color( 1, 1, 1, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="MainLevel" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BackgroundTileSet" type="TileMap" parent="."]

transform/pos = Vector2( -1, 0 )
z/z = -2
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 255, 255 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -393228, -1610612734, -393227, -1610612734, -393226, 2, -393225, 2, -393224, 2, -393223, 2, -393222, 2, -393221, 2, -393220, 2, -393219, 2, -393218, 2, -393217, 2, -458752, 2, -458751, 2, -458750, 2, -458749, 2, -458748, 2, -458747, 2, -458746, 2, -458745, 2, -458744, 2, -458743, 2, -458742, 2, -458741, 2, -458740, 2, -458739, 2, -458738, -1610612734, -458737, -1610612734, -327692, -1610612734, -327691, -1610612734, -327690, 2, -327689, 2, -327688, 2, -327687, 2, -327686, 2, -327685, 2, -327684, 2, -327683, 2, -327682, 2, -327681, 2, -393216, 2, -393215, 2, -393214, 2, -393213, 2, -393212, 2, -393211, 2, -393210, 2, -393209, 2, -393208, 2, -393207, 2, -393206, 2, -393205, 2, -393204, 2, -393203, 2, -393202, -1610612734, -393201, -1610612734, -262156, -1610612734, -262155, -1610612734, -262154, 2, -262153, 2, -262152, 2, -262151, 2, -262150, 2, -262149, 2, -262148, 2, -262147, 2, -262146, 2, -262145, 2, -327680, 2, -327679, 2, -327678, 2, -327677, 2, -327676, 2, -327675, 2, -327674, 2, -327673, 2, -327672, 2, -327671, 2, -327670, 2, -327669, 2, -327668, 2, -327667, 2, -327666, -1610612734, -327665, -1610612734, -196620, -1610612734, -196619, -1610612734, -196618, 2, -196617, 2, -196616, 2, -196615, 2, -196614, 2, -196613, 2, -196612, 2, -196611, 2, -196610, 2, -196609, 2, -262144, 2, -262143, 2, -262142, 2, -262141, 2, -262140, 2, -262139, 2, -262138, 2, -262137, 2, -262136, 2, -262135, 2, -262134, 2, -262133, 2, -262132, 2, -262131, 2, -262130, -1610612734, -262129, -1610612734, -131084, -1610612734, -131083, -1610612734, -131082, 2, -131081, 2, -131080, 2, -131079, 2, -131078, 2, -131077, 2, -131076, 2, -131075, 2, -131074, 2, -131073, 2, -196608, 2, -196607, 2, -196606, 2, -196605, 2, -196604, 2, -196603, 2, -196602, 2, -196601, 2, -196600, 2, -196599, 2, -196598, 2, -196597, 2, -196596, 2, -196595, 2, -196594, -1610612734, -196593, -1610612734, -65548, -1610612734, -65547, -1610612734, -65546, 2, -65545, 2, -65544, 2, -65543, 2, -65542, 2, -65541, 2, -65540, 2, -65539, 2, -65538, 2, -65537, 2, -131072, 2, -131071, 2, -131070, 2, -131069, 2, -131068, 2, -131067, 2, -131066, 2, -131065, 2, -131064, 2, -131063, 2, -131062, 2, -131061, 2, -131060, 2, -131059, 2, -131058, -1610612734, -131057, -1610612734, -12, -1610612734, -11, -1610612734, -10, 2, -9, 2, -8, 2, -7, 2, -6, 2, -5, 2, -4, 2, -3, 2, -2, 2, -1, 2, -65536, 2, -65535, 2, -65534, 2, -65533, 2, -65532, 2, -65531, 2, -65530, 2, -65529, 2, -65528, 2, -65527, 2, -65526, 2, -65525, 2, -65524, 2, -65523, 2, -65522, -1610612734, -65521, -1610612734, 65524, -1610612734, 65525, -1610612734, 65526, 2, 65527, 2, 65528, 2, 65529, 2, 65530, 2, 65531, 2, 65532, 2, 65533, 2, 65534, 2, 65535, 2, 0, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5, 2, 6, 2, 7, 2, 8, 2, 9, 2, 10, 2, 11, 2, 12, 2, 13, 2, 14, -1610612734, 15, -1610612734, 131060, -1610612734, 131061, -1610612734, 131062, 2, 131063, 2, 131064, 2, 131065, 2, 131066, 2, 131067, 2, 131068, 2, 131069, 2, 131070, 2, 131071, 2, 65536, 2, 65537, 2, 65538, 2, 65539, 2, 65540, 2, 65541, 2, 65542, 2, 65543, 2, 65544, 2, 65545, 2, 65546, 2, 65547, 2, 65548, 2, 65549, -1610612734, 65550, -1610612734, 65551, -1610612734, 196596, -1610612734, 196597, -1610612734, 196598, 2, 196599, 2, 196600, 2, 196601, 2, 196602, 2, 196603, 2, 196604, 2, 196605, 2, 196606, 2, 196607, 2, 131072, 2, 131073, 2, 131074, 2, 131075, 2, 131076, 2, 131077, 2, 131078, 2, 131079, 2, 131080, 2, 131081, 2, 131082, 2, 131083, 2, 131084, 2, 131085, -1610612734, 131086, -1610612734, 131087, -1610612734, 262132, -1610612734, 262133, -1610612734, 262134, 2, 262135, 2, 262136, 2, 262137, 2, 262138, 2, 262139, 2, 262140, 2, 262141, 2, 262142, 2, 262143, 2, 196608, 2, 196609, 2, 196610, 2, 196611, 2, 196612, 2, 196613, 2, 196614, 2, 196615, 2, 196616, 2, 196617, 2, 196618, 2, 196619, 2, 196620, 2, 196621, -1610612734, 196622, -1610612734, 196623, -1610612734, 327668, -1610612734, 327669, -1610612734, 327670, 2, 327671, 2, 327672, 2, 327673, 2, 327674, 2, 327675, 2, 327676, 2, 327677, 2, 327678, 2, 327679, 2, 262144, 2, 262145, 2, 262146, 2, 262147, 2, 262148, 2, 262149, 2, 262150, 2, 262151, 2, 262152, 2, 262153, 2, 262154, 2, 262155, 2, 262156, 2, 262157, -1610612734, 262158, -1610612734, 262159, -1610612734, 393204, -1610612734, 393205, -1610612734, 393206, 2, 393207, 2, 393208, 2, 393209, 2, 393210, 2, 393211, 2, 393212, 2, 393213, 2, 393214, 2, 393215, 2, 327680, 2, 327681, 2, 327682, 2, 327683, 2, 327684, 2, 327685, 2, 327686, 2, 327687, 2, 327688, 2, 327689, 2, 327690, 2, 327691, 2, 327692, 2, 327693, -1610612734, 327694, -1610612734, 327695, -1610612734, 458740, -1610612734, 458741, -1610612734, 458742, 2, 458743, 2, 458744, 2, 458745, 2, 458746, 2, 458747, 2, 458748, 2, 458749, 2, 458750, 2, 458751, 2, 393216, 2, 393217, 2, 393218, 2, 393219, 2, 393220, 2, 393221, 2, 393222, 2, 393223, 2, 393224, 2, 393225, 2, 393226, 2, 393227, 2, 393228, 2, 393229, 2, 393230, -1610612734, 393231, -1610612734, 524276, -1610612734, 524277, -1610612734, 524278, 2, 524279, 2, 524280, 2, 524281, 2, 524282, 2, 524283, 2, 524284, 2, 524285, 2, 524286, 2, 524287, 2, 458752, 2, 458753, 2, 458754, 2, 458755, 2, 458756, 2, 458757, 2, 458758, 2, 458759, 2, 458760, 2, 458761, 2, 458762, 2, 458763, 2, 458764, 2, 458765, 2, 458766, -1610612734, 458767, -1610612734, 589812, -1610612734, 589813, -1610612734, 589814, 2, 589815, 2, 589816, 2, 589817, 2, 589818, 2, 589819, 2, 589820, 2, 589821, 2, 589822, 2, 589823, 2, 524288, 2, 524289, 2, 524290, 2, 524291, 2, 524292, 2, 524293, 2, 524294, 2, 524295, 2, 524296, 2, 524297, 2, 524298, 2, 524299, 2, 524300, 2, 524301, 2, 524302, -1610612734, 524303, -1610612734 )

[node name="LevelHighlightsSet" type="TileMap" parent="."]

z/z = 1
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 127, 127 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -524302, 1, -524301, 0, -524300, 0, -524299, 0, -524298, 0, -524297, 0, -524296, 0, -524295, 0, -524294, 0, -524293, 0, -524292, 0, -524291, 0, -524290, 0, -524289, 0, -589824, 0, -589823, 0, -589822, 0, -589821, 0, -589820, 0, -589819, 0, -589818, 0, -589817, 0, -589816, 0, -589815, 0, -589814, 0, -589813, 0, -589812, 0, -589811, 0, -589810, 0, -589809, 0, -589808, 0, -589807, 0, -589806, 0, -589805, 0, -589804, 0, -589803, 2, -458766, -1610612735, -458763, -1610612733, -524267, -1610612735, -393230, -1610612736, -458731, -1610612736, -327694, -1610612736, -393196, -1610612733, -393195, -1610612736, -262158, -1610612736, -262151, -1610612733, -327678, -1610612733, -327673, -1610612733, -327659, -1610612736, -196622, -1610612736, -262123, -1610612736, -131086, -1610612736, -131076, -1610612733, -196592, -1610612733, -196587, -1610612736, -65550, -1610612736, -131051, -1610612736, -14, -1610612736, -8, -1610612733, -65515, -1610612736, 65522, -1610612736, 21, -1610612736, 131058, -1610612736, 65545, -1610612733, 65557, -1610612736, 196594, -1610612736, 131093, -1610612736, 262130, -1610612736, 196609, -1610612733, 196629, -1610612736, 327666, -1610612736, 262160, -1610612733, 262165, -1610612736, 393202, -1610612736, 393214, -1610612733, 327701, -1610612736, 458738, -1610612736, 458741, -1610612733, 393226, -1610612733, 393227, -1610612733, 393237, -1610612736, 524274, -1610612736, 458773, -1610612736, 589810, -1610612736, 524309, -1610612736, 655346, -1610612734, 655359, -1610612733, 589845, -1610612734, 720882, 1, 720883, 0, 720884, 0, 720885, 0, 720886, 0, 720887, 0, 720888, 0, 720889, 0, 720890, 0, 720891, 0, 720892, 0, 720893, 0, 720894, 0, 720895, 0, 655360, 0, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 0, 655379, 0, 655380, 0, 655381, 2 )

[node name="Camera2D" type="Camera2D" parent="."]

z/z = 3
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 10.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Character" parent="." instance=ExtResource( 4 )]

[node name="FirstBound" type="Position2D" parent="."]

transform/pos = Vector2( -1658, -1020 )

[node name="LastBound" type="Position2D" parent="."]

transform/pos = Vector2( 2678, 1275 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="HealthSprite" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 217.091, 37.5648 )
transform/scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 5 )

[node name="XpSprite" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 217.091, 99.5648 )
transform/scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 6 )

[node name="HealthProgress" type="ProgressBar" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 15.0
margin/right = 186.0
margin/bottom = 64.0
custom_styles/fg = SubResource( 1 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="HealthBar" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 99.2289, 37.5648 )
transform/scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 7 )

[node name="XpProgress" type="ProgressBar" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 77.0
margin/right = 186.0
margin/bottom = 126.0
custom_styles/fg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="XpBar" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 99.2289, 99.5648 )
transform/scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 8 )

[node name="GameOverPanel" type="Panel" parent="CanvasLayer"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
__meta__ = {
"_edit_lock_": true
}

[node name="GameOverText" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 512.0
margin/top = 300.0
margin/right = 591.0
margin/bottom = 326.0
custom_fonts/font = ExtResource( 9 )
text = "Game Over!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="InputConsumer" type="Node2D" parent="."]

process/pause_mode = 2
script/script = ExtResource( 10 )

[connection signal="onBugCollide" from="Character" to="." method="_on_Character_onBugCollide"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


